Hyphenate breadcrumb hyphenation & fix overflow

--- a/assets/styles/ui-components/_breadcrumbs.scss
+++ b/assets/styles/ui-components/_breadcrumbs.scss
@@ -13,6 +13,8 @@ $tms-breadcrumb-item-color-separator: $color-black !default;
 
     .breadcrumbs {
         &__nav {
+            margin-top: -$theme-spacing-quarter !important;
+            margin-bottom: -$theme-spacing-quarter !important;
             font-size: $size-7;
             line-height: 1.2;
             font-weight: $weight-medium;
@@ -30,6 +32,11 @@ $tms-breadcrumb-item-color-separator: $color-black !default;
                 &:active {
                     color: $tms-breadcrumb-item-color-active;
                 }
+            }
+
+            > li {
+                margin-top: $theme-spacing-quarter;
+                margin-bottom: $theme-spacing-quarter;
             }
         }
     }
